# sudi-keyboard

./: .gitignore  .gitmodules  LICENSE  Note.md  README.md  README_V1.md  Sudi-V2-Map.bee  justfile
casing-design/: 128x32-OLED_log.xml  4df.prt.1  4f5.prt.1  CHERRYMX_CAD_CAM_KEYCAPS_log.xml  SUDI-Casing.20231105-202531.FCBak  SUDI-Casing.FCStd  arduino_pro_micro.asm.1  arduino_pro_micro_1.asm.1  atmega32u4.prt.1  base.prt.10  base.prt.11  base.prt.12  base.prt.9  boss-extrude1-19779.prt.1  boss-extrude1-5275.prt.1  boss-extrude1-79165.prt.1  boss-extrude4-12484.prt.1  casing-keyboard.asm.12  casing-keyboard.asm.16  casing-keyboard.asm.19  casing-keyboard.asm.2  casing-keyboard.asm.20  casing-keyboard.asm.22  casing-keyboard.asm.23  casing-keyboard.asm.31  casing-keyboard.asm.37  casing-keyboard.asm.41  casing-keyboard.asm.43  casing-keyboard.asm.44  casing-keyboard.asm.50  casing-keyboard.asm.56  casing-keyboard.asm.61  casing-keyboard.asm.63  casing-keyboard.asm.67  casing-keyboard.asm.69  casing-keyboard.asm.81  casing-keyboard.asm.85  compound_3.prt.1  compound_7.prt.1  compound_8.prt.1  (+37 more)
casing-design/Export/: keyboarddrawing_dxf__out.log.1
casing-design/version1/: 128x32-oled.asm.1  128x32-oled_1.asm.1  4f8.prt.1  95501-2661.asm  ARDUINO_PRO_MICRO_log.xml  base.prt.1  base.prt.2  base.prt.3  base.prt.4  base.prt.5  base.prt.6  base.prt.7  base.prt.8  boss-extrude1-96847.prt.1  boss-extrude4-112968.prt.1  boss-extrude4-59213.prt.1  boss-extrude4-63204.prt.1  boss-extrude5.prt.1  casing-keyboard.asm.1  casing-keyboard.asm.10  casing-keyboard.asm.11  casing-keyboard.asm.13  casing-keyboard.asm.14  casing-keyboard.asm.15  casing-keyboard.asm.17  casing-keyboard.asm.18  casing-keyboard.asm.21  casing-keyboard.asm.24  casing-keyboard.asm.25  casing-keyboard.asm.26  casing-keyboard.asm.27  casing-keyboard.asm.28  casing-keyboard.asm.29  casing-keyboard.asm.3  casing-keyboard.asm.30  casing-keyboard.asm.32  casing-keyboard.asm.33  casing-keyboard.asm.34  casing-keyboard.asm.35  casing-keyboard.asm.36  (+161 more)
casing-design/version1/Export/: keyboarddrawing.dxf  keyboarddrawing2.dxf  keyboarddrawing2_dxf__out.log.1
casing-design/version2/creo/: bottomextender.prt.1  bottomextender.prt.2  bottomextender.prt.3  bottomextender.prt.4  c_0805_2012metric-92184.asm.1  c_0805_2012metric-92207.prt.1  enclosure.prt.1  enclosure.prt.2  enclosure.prt.3  enclosure.prt.4  enclosure.prt.5  enclosure.prt.6  enclosure.prt.7  enclosure.prt.8  enclosure.prt.9  fusion_sp.prt.1  kailh_hotswap_mx_v22-142576.asm.1  kailh_hotswap_mx_v22-142599.asm.1  kailh_hotswap_mx_v22-142599_1.prt.1  kailh_hotswap_mx_v22-142599_2.prt.1  kailh_hotswap_mx_v22-142599_3.prt.1  kailh_hotswap_mx_v22-142599_4.prt.1  kailh_hotswap_mx_v22-142599_5.prt.1  kailh_hotswap_mx_v22-142599_6.prt.1  kailh_hotswap_mx_v22-189265.asm.1  kailh_hotswap_mx_v22-189288.asm.1  kailh_hotswap_mx_v22-189288_1.prt.1  kailh_hotswap_mx_v22-189288_2.prt.1  kailh_hotswap_mx_v22-189288_3.prt.1  kailh_hotswap_mx_v22-189288_4.prt.1  kailh_hotswap_mx_v22-189288_5.prt.1  kailh_hotswap_mx_v22-189288_6.prt.1  kailh_hotswap_mx_v22-52573.asm.1  kailh_hotswap_mx_v22-52596.asm.1  kailh_hotswap_mx_v22-52596_1.prt.1  kailh_hotswap_mx_v22-52596_2.prt.1  kailh_hotswap_mx_v22-52596_3.prt.1  kailh_hotswap_mx_v22-52596_4.prt.1  kailh_hotswap_mx_v22-52596_5.prt.1  kailh_hotswap_mx_v22-52596_6.prt.1  (+174 more)
casing-design/version2/freecad/: SudiV2-Casing.FCStd.0cbbf0c9-1eaa-4c4b-b3fa-a089089996f7  (+1 more)
development-board/: README.md
development-board/NRF51822_Module/: .gitignore  README.md
development-board/minions/: README.md  minions.kicad_pcb  minions.kicad_prl  minions.kicad_pro  minions.kicad_sch
firmware/: .gitignore  matrix.c  read  rules.mk  sudi
firmware/coretan/: Cargo.toml  justfile
firmware/shared/: Cargo.toml
firmware/sudi-firmware/: Cargo.toml  README.md  memory.x
firmware/v1/: README.md  config.h  keyboard.json  layout.h  rules.mk
firmware/v2/: .gdb_history  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Makefile.toml  README.md  ble_bas_peripheral_sec_expanded.rs  gdbcmd.txt  justfile  nrf51.jlink  rust-toolchain.toml  upload_merged
firmware/v2-rmk/: Cargo.toml  README.md
firmware/v2/bleak-bas/: main.py  pyproject.toml
firmware/v2/cmake/: nRF5-cmake.cmake  toolchain.cmake
firmware/v2/config/: custom_board.h
firmware/v2/scafold/: Cargo.toml  justfile
firmware/v2/scafold/src/: main.rs
firmware/v2/sdk/: README.md
firmware/v2/src/: ble.rs  gcc_nrf51.ld  gcc_nrf51.ld.in  lib.rs  main.c  writer.rs
firmware/v2/src/ble/: battery_server.rs  hid_server.rs
firmware/v2/src/config/: custom_board.h  sdk_config.h
firmware/v2/src/reader/: matrix_direct_pin_reader.rs  matrix_i2c_reader.rs  reader_trait.rs
firmware/v2/src/writer/: writer_trait.rs
firmware/v2z/: .gitignore  README.md  env.yml
firmware/wired_v1/: info.json  matrix.c
pcb-design/: Receiver.kicad_sch  fp-info-cache  fp-lib-table  sudi-redox-clone.kicad_pcb  sudi-redox-clone.kicad_prl  sudi-redox-clone.kicad_pro  sudi-redox-clone.kicad_sch  sym-lib-table
pcb-design/dxf/: sudi-redox-clone-B_Silkscreen.dxf  sudi-redox-clone-PTH.drl
pcb-design/gerber/: sudi-redox-clone-B_Cu.gbr  sudi-redox-clone-B_Mask.gbr  sudi-redox-clone-B_Paste.gbr  sudi-redox-clone-B_Silkscreen.gbr  sudi-redox-clone-Edge_Cuts.gbr  sudi-redox-clone-F_Cu.gbr  sudi-redox-clone-F_Mask.gbr  sudi-redox-clone-F_Paste.gbr  sudi-redox-clone-F_Silkscreen.gbr  sudi-redox-clone-NPTH.drl  sudi-redox-clone-PTH.drl  sudi-redox-clone-job.gbrjob
pcb-design/output/: sudi-redox-clone-B_Paste.gbr  sudi-redox-clone-B_Silkscreen.gbr  sudi-redox-clone-Edge_Cuts.gbr  sudi-redox-clone-F_Cu.gbr  sudi-redox-clone-NPTH.drl  sudi-redox-clone-job.gbrjob  sudi-v2-bom.csv
pcb-design/version_1/: fp-lib-table  sudi-redox-clone.kicad_sch
pcb-design/version_2/: Receiver.kicad_sch  fp-info-cache  sudi-keyboard.kicad_pcb  sudi-keyboard.kicad_prl  sudi-keyboard.kicad_pro  sudi-keyboard.kicad_sch  sudi-redox-clone.kicad_prl
sudi-redox-clone/: #auto_saved_files#  fp-lib-table  sudi-redox-clone.kicad_pcb  sudi-redox-clone.kicad_pro
(+158 files in other folders)
