[package]
name = "sudi_firmware"
version = "0.0.2"
edition = "2021"
authors = ["Ahsanu Amala <caasperahsanuamala5@gmail.com>"]
resolver = "2"

[dependencies]
embedded-hal = "1.0"
embedded-hal-async = "1.0"

embassy-executor = { version = "0.8", default-features = false, features = ["arch-cortex-m", "executor-thread", "defmt", "executor-interrupt"] }
embassy-time = { version = "0.4", default-features = false, features = ["defmt", "defmt-timestamp-uptime"] }
embassy-futures = "0.1.1"
embassy-sync = { version = "0.7", features = ["defmt"] }
embassy-nrf = { version = "0.6", default-features = false, features = [
  "nfc-pins-as-gpio",
  "defmt", 
  "time-driver-rtc1", 
  "gpiote", 
  "unstable-pac",
  "rt"
] }

futures = { version = "0.3", default-features = false, features = ["async-await"]}
nrf-sdc = { version = "0.2", default-features = false, features = ["defmt", "peripheral", "central"] }
nrf-mpsl = { version = "0.2", default-features = false, features = ["defmt", "critical-section-impl"] }
bt-hci = { version = "0.4", default-features = false, features = ["defmt"] }
trouble-host = { version = "0.2.4", features = [
    "defmt",
    "scan",
    "derive",
]}

defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }

cortex-m = { version = "0.7.6" }
cortex-m-rt = "0.7.0"
rand = { version = "0.8.5", default-features = false }
static_cell = "2"
rand_core = { version = "0.6"}
rand_chacha = { version = "0.3", default-features = false }

embedded-io = "0.6"
heapless = "0.8"

[profile.release]
debug = 2

[features]
default=["nrf52832"]
nrf52832 = [
    "embassy-nrf/nrf52832",
    "nrf-sdc/nrf52832",
]

# [[bin]]
# name = "sudi-firmware"
# path = "./src/bin/main.rs"
# test = false
# bench = false

# [profile.dev]
# debug = true
# lto = true
# opt-level = "z"
# incremental = true

